Created attachment 63552 [details] ODT and DOC files, saved from the exact same document, showing problems with doc version. When creating a document with SVG images in it, and save it as Microsoft Word document (both .doc and .docx), and reload the document, the SVGs are very low resolution pixel images, even worse than a typical on-screen preview. The resolution is so low, that even unmagnified, individual pixels can be easily seen on the screen; printout looks completely unacceptable. Saving and reloading OpenDocument formats retains high-quality vector graphics. See Attachment.
At least PARTLY REPRODUCIBLE with LibreOffice 3.5.4.2, German UI, on MacOS X 10.6.8 German. This is a very interesting issue. I have tried to reproduce it, but the results are complicated. 1) I have tried to save your .odt sample file "SVG-Doc-Bug.odt" as .doc file and .docx file myself. I can confirm that the SVG diagram becomes a bitmap image, therefore REPRODUCIBLE (and set Status > NEW). However, the resolution of the bitmap is a bit better than in your sample .doc file. Therefore, there seems to be some circumstances which have influence on the resolution of the bitmap generated. This is (at least) interesting. 2) I have created some simple .odt sample files which contain some SVG graphics. At least in one case, if I save the .odt file as .doc or .docx file, the .doc and .docx file seem to contain the original vector graphics -- at least, I can scale the .doc and .docx files without any visible loss of quality. 3) In some other cases, if I save the .odt file as .doc or .docx file, the .doc and .docx file contain just bitmap images, just like in the original sample file. So, this seems to be a complicated issue: in some cases, LibreOffice Writer seems to embed the vector graphics in the .doc/.docx files, in the other cases it just exports a bitmap image to .doc/.docx, and even the resolution of this bitmap image seems to differ in quality. I will attach sample files for all three cases.
Created attachment 63571 [details] Comment 1 case 1: Bernd's .odt sample file saved as .doc file, resolution of bitmap seems better
Created attachment 63572 [details] Comment 1 case 2: .odt file with SVG graphics which seems (!) to get saved as vector graphics to .doc/.docx
Created attachment 63574 [details] Comment 1 case 3: .odt file with SVG graphics which becomes bitmap in .doc/.docx
Could this be related to Bug 49832 - "PRINTING: Writer rasterizes SVG for output to a printer or into PDF, which leads to poor quality laser printing"? Just an idea ...
Changing Component to "Printing and PDF export", as appropriate
LO 3.5/3.6 stores vector graphics as SVG internally, but every output is done via bitmaps. As Roman says, this is related to Bug 42092. (By the way, attachment 42092, "RNE sample 1, B+W floor plan.zip", also contains only a bitmap, but hi-res.) Word cannot handle SVG, so vector graphics have to be converted to EPS or a WMF format. LO doesn't do that, even the current LO 4.0.0 alpha: it still rasterizes SVG for DOCX output. Changed component and platform. I think this will be the same on every system.
can you test if that problem still happens on 4.0, which has a different SVG implementation?
Created attachment 80523 [details] Collection of screenshots (PNG) showing visual output quality. This bug appears to have two distinct parts. The first (a) appears to be the degradation ("low-resolution pixel graphics"), of a SVG embedded in an ODT file, when the file is saved in DOC/DOCX format. The second (b) seems to be the conversion, of a SVG embedded in an ODT file, to a raster format (e.g., PNG) when the file is saved in DOC/DOCX format. Comment #7 (and related comments in bug #42092) would seem to indicate that this second part is probably unavoidable and thus not a valid consideration for this bug. Microsoft would certainly prefer people use Silverlight in preference to SVG. This leaves (a) which I think can now be RESOLVED as FIXED. I have tested all the attachments to this bug under Crunchbang 11 running TDF/LO v4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539) and there is marked improvement in the on screen display for the examples and indiscernable graphic output quality to PDF. This would appear in keeping with the remark in bug #42092#c45. There is however a difference in the nature of some of the attached SVGs that needs to be described. I will refer to the initial attachment as "BS_orig" and the other three attachments as "RME_c1_orig", "RME_c2_orig", and "RME_c3_BS_orig". Each SVG was generated by: BS_orig = graphviz version 2.28.0. RME_c1_orig = Inkscape. RME_c2_orig = Adobe Illustrator 13.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 14948. RME_c3_BS_orig is simply the ODT from BS_orig resaved as a DOC. Not all SVGs are equal and SVGs exported from Draw can behave differently again to these examples. This is not an issue for this bug but rather a consideration that must be taken into account when testing with these file formats. It is worth noting that the text in the BS_orig SVG appears formatted differently in some of my tests probably because I do not have the Helvetica Type 1 font installed. The difference described in comment #1 (point 2) and comment #3 is due to the original SVG being converted to an EMF in the DOCX (and probably DOC). The reason for this (under v3.5/3.6) is indicated in comment #7 and in several comments in bug #42092 relating to EPS handling. This is no longer the case under LO v4.0. All ODT files from BS_orig, RME_c1_orig, and RME_c2_orig, when resaved as DOCX include only a PNG. I have attached a collection of images showing the on screen quality for the various examples and how each ODT/SVG appears when re-saved as DOC/DOCX/PNG. All are taken at 100% zoom with anti-aliasing turn on. The file names should be indicative.
Might this bug be a duplicate of bug #68927? Then this one might already be fixed.
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present on a currently supported version of LibreOffice (5.0.4 or later) https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa Thank you for your help! -- The LibreOffice QA Team This NEW Message was generated on: 2015-12-20
I can confirm that this bug still exists. I'm using Writer 4.2.8.2 on a Linux-64 machine. Whenever I save a file with vector graphics as a .docx, it rasterizes all my images and makes the document useless. I hope that someone can fix this soon, because it's severely impacting LibreOffice's utility for me.
(In reply to Adam Smith from comment #12) > I can confirm that this bug still exists. I'm using Writer 4.2.8.2 on a > Linux-64 machine. Whenever I save a file with vector graphics as a .docx, it > rasterizes all my images and makes the document useless. I hope that someone > can fix this soon, because it's severely impacting LibreOffice's utility for > me. Would be better to test with a fresh 5.3: http://dev-builds.libreoffice.org/daily/master/?C=M;O=A https://wiki.documentfoundation.org/Installing_in_parallel/Linux
Confirming with: Version: 5.3.0.0.beta1 Build ID: 690f553ecb3efd19143acbf01f3af4e289e94536 CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; Layout Engine: new; Locale: nl-NL (nl_NL); Calc: CL
Still reproducible in Version: 6.0.0.0.alpha0+ Build ID: 86f256596c8566e80993e1cf6035bc3534b6f816 CPU threads: 4; OS: Linux 4.10; UI render: GL; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
Repro 7.1+. Usable in doc/docx, but definitely significantly degraded compared to ODT.
*** Bug 56691 has been marked as a duplicate of this bug. ***
*** Bug 135746 has been marked as a duplicate of this bug. ***
*** Bug 127234 has been marked as a duplicate of this bug. ***
*** Bug 121831 has been marked as a duplicate of this bug. ***
Created attachment 170646 [details] An ODT with a scaled small SVG Trying to export this ODT to DOCX will result in awful result. The SVG there is very simple: <?xml version="1.0" encoding="UTF-8"?> <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 20 20" stroke="black"> <path d="M1,1L19,19"/> </svg> It is defining a bounding box 21x21 logical units, and draws a diagonal from 1,1 to 19,19. When exported to PNG, VectorGraphicData::ensureReplacement generates a 21x21 *pixels* bitmap, and then that bitmap is saved to the document (and is shown on page scaled to requested dimensions).
*** Bug 140664 has been marked as a duplicate of this bug. ***
*** Bug 141751 has been marked as a duplicate of this bug. ***
*** Bug 147331 has been marked as a duplicate of this bug. ***