tdf#51510 Blurry QR code after save/reload (docx)

- without GfxLinkType::NativeSvg CASE in writeToStorage method by default QR svg changes to low resolution image type and that is the why QR got blurry in doc or docx format
- added svg option when we change from odt to doc or docx format


Change-Id: I74aec0619992c1f455cc9cbf3c19e352c3037e04
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157264
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Tested-by: Szymon Kłos <szymon.klos@collabora.com>