oox/source/export/drawingml.cxx
@@ -1429,6 +1429,10 @@ OUString GraphicExport::writeToStorage(const Graphic& rGraphic , bool bRelPathTo
                 sMediaType = "image/png";
                 pExtension = ".png";
                 break;
+            case GfxLinkType::NativeSvg:
+                sMediaType = "image/svg";
+                pExtension = ".svg";
+                break;
             case GfxLinkType::NativeTif:
                 sMediaType = "image/tiff";
                 pExtension = ".tif";
